[package]
name = "espcam"
version = "0.1.0"
authors = ["Kezi <keziolio123@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[lib]
harness = false

[features]
default = []

# pio = ["esp-idf-svc/pio"]
# std = ["alloc"]
# alloc = ["esp-idf-svc/alloc"]
# nightly = ["esp-idf-svc/nightly"]
# experimental = ["esp-idf-svc/experimental"]
# embassy = [
#   "esp-idf-svc/embassy-sync",
#   "esp-idf-svc/critical-section",
#   "esp-idf-svc/embassy-time-driver",
# ]

[dependencies]
log = { version = "0.4", default-features = false }
# esp-idf-svc = { version = "0.51", default-features = false }
# embedded-svc = "0.28"
anyhow = "1.0.79"

rgb565 = "0.1.3"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

esp-idf-hal = "0.45"
esp-idf-sys = "0.36"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[dev-dependencies]
embedded-sdmmc = "0.8.1"
# To convert Spi bus to SpiDevice
embedded-hal-bus = "0.3.0"
embedded-hal = "1.0"


[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "components/esp32-camera"
bindings_header = "components/bindings.h"
bindings_module = "camera"

[profile.release]
opt-level = 2
lto = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
